# email-server

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
crates/email-server/: Cargo.toml
crates/email-server-core/: Cargo.toml
crates/email-server-core/src/: lib.rs  logging.rs  message.rs  smtp.rs  socket.rs
crates/email-server-core/src/smtp/: command.rs  message.rs  mod.rs  server.rs  state.rs  status.rs  validator.rs
crates/email-server-core/src/storage/: message.rs  mod.rs
crates/email-server/src/: main.rs
