[package]
name = "email-server-core"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
derive_builder = "0.20.2"
tokio = { version = "1.43.0", features = ["full"] }
bytes = "1.10.0"
async-trait = "0.1.87"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.17.1"
tokio-util = { version = "0.7.13", features = ["codec"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
once_cell = "1.20.3"
uuid = { version = "1.14.0", features = ["v4"] }
hickory-resolver = "0.24.4"
